Added functionality to observe time for major function & some house cleaning

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -48,4 +48,4 @@ all: ROUTE.exe
 .PHONY: execute
 
 execute: ROUTE.exe
-	./ROUTE.exe in.txt out.txt
+	./ROUTE.exe -d=0 -n=0 ../benchmarks/adaptec1.gr out.txt
