qsort based function for netdecomposing

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -44,8 +44,7 @@ clean:
 
 all: ROUTE.exe
 
-
 .PHONY: execute
 
 execute: ROUTE.exe
-	./ROUTE.exe -d=0 -n=0 ../benchmarks/in.gr out.txt
+	./ROUTE.exe -d=1 -n=0 ../benchmarks/adaptec1.gr adaptec1outcompX.txt
