Fixed ece556.h merges

--- a/part2/Makefile
+++ b/part2/Makefile
@@ -25,17 +25,21 @@ CCLNFLAGS = -lm -pthread
 #  make execute  : to compile and execute.                         
 #------------------------------------------------------------    
 
-ROUTE.exe: main.o ece556.o 
+ROUTE.exe: main.o ece556.o rrr.o
 	/bin/rm -f ROUTE.exe
-	$(CCC) $(LINKFLAGS) $(CCFLAGS) main.o ece556.o $(CCLNFLAGS) -o ROUTE.exe
+	$(CCC) $(LINKFLAGS) $(CCFLAGS) main.o ece556.o rrr.o $(CCLNFLAGS) -o ROUTE.exe
 
-main.o: main.cpp ece556.h
+main.o: main.cpp ece556.h rrr.h
 	/bin/rm -f main.o
 	$(CCC) $(CCFLAGS) main.cpp -c
 
 ece556.o: ece556.cpp ece556.h
 	/bin/rm -f ece556.o
 	$(CCC) $(CCFLAGS) ece556.cpp -c
+
+rrr.o: rrr.cpp ece556.h rrr.h
+	/bin/rm -f rrr.o
+	$(CCC) $(CCFLAGS) rrr.cpp -c
 
 clean:
 	/bin/rm -f *~ *.o ROUTE.exe 
@@ -47,11 +51,12 @@ all: ROUTE.exe
 .PHONY: execute
 
 execute: ROUTE.exe
-	./ROUTE.exe -d=1 -n=0 ../benchmarks/in.gr outputs/out.txt
+	./ROUTE.exe -d=1 -n=1 ../benchmarks/in.gr outputs/out.txt
 
 .PHONY: execute_all
 
 execute_all: ROUTE.exe
+	/bin/rm -f /outputs/adaptec*_out.txt
 	./ROUTE.exe -d=1 -n=0 ../benchmarks/adaptec1.gr outputs/adaptec1_out.txt
 	./ROUTE.exe -d=1 -n=0 ../benchmarks/adaptec2.gr outputs/adaptec2_out.txt
 	./ROUTE.exe -d=1 -n=0 ../benchmarks/adaptec3.gr outputs/adaptec3_out.txt
